# osrm-utils

./: .gitignore  LICENSE.txt  MANIFEST.in  README.md  environment.yml  setup.cfg  setup.py
src/osrmutils/: osrmutils.py
