[metadata]
# package name
name = osrmutils
version = 0.1.0
author = Zachary Vander Laan
author_email = zach.vdlaan@gmail.com
description = Reusable code for querying open source routing machine (OSRM)
url = https://github.com/zvanderlaan/osrm-utils.git

[options]
package_dir =
    = src
packages = find:
python_requires = >=3.7
install_requires = 
    numpy 
    pandas   
include_package_data = False
[options.packages.find]
where = src


